cmss/opportunity-management/objects/OpportunityExpirationConfig__mdt/OpportunityExpirationConfig__mdt.object-meta.xml
<CustomObject>
    <label>Opportunity Expiration Config</label>
    <pluralLabel>Opportunity Expiration Configs</pluralLabel>
</CustomObject>