cmss/opportunity-management/objects/OpportunityExpirationConfig__mdt/fields/ChainActivityExpireBatch__c.field-meta.xml
<CustomField>
    <fullName>ChainActivityExpireBatch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chain Activity Expire Batch</label>
    <type>Checkbox</type>
</CustomField>