cmss/opportunity-management/objects/OpportunityExpirationConfig__mdt/fields/ExpirationDaysFromValidFrom__c.field-meta.xml
<CustomField>
    <fullName>ExpirationDaysFromValidFrom__c</fullName>
    <label>Expiration Days From Valid From</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>