cmss/opportunity-management/objects/OpportunityExpirationConfig__mdt/fields/ExpirationDaysFromValidTo__c.field-meta.xml
<CustomField>
    <fullName>ExpirationDaysFromValidTo__c</fullName>
    <label>Expiration Days From Valid To</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>